# press

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32dev
data/: app.js  index.html  manifest.json  style.css
src/: CMakeLists.txt  Kconfig.projbuild  buttons.c  buttons.h  config.c  config.h  idf_component.yml  main.c  motion.c  motion.h  pin_defs.h  rmt_encoder.c  rmt_encoder.h  stepper.c  stepper.h  webserver.c  webserver.h  wifi_prov.c  wifi_prov.h
